About us page Linked style sheet

--- a/about-us.html
+++ b/about-us.html
@@ -8,14 +8,8 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <!-- Optional theme -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/default.css"/>
   <title>Northeastern Counseling Services | Mechanicsburg, PA</title>
-  <style>
-  html { position: relative; min-height: 100%; }
-  body { margin-bottom: 60px; padding-top: 70px; font-family:"Segoe UI","Segoe","Helvetica Neue",Helvetica,Arial,sans-serif; }
-  .footer { position: absolute; bottom: 0; width: 100%; height: 40px; background-color: #f5f5f5; padding-top:8px; }
-  .navbar-brand>img{ display:inline;margin:0 10px; } /* add height:100% for bigger images */
-  main { font-size:1.25em; }
-  </style>
 </head>
 <body>
   <div>
@@ -47,8 +41,132 @@
     </header>
     <main>
       <div class="container">
-        <p>
-        </p>
+        <h1>About Us</h1>
+        <section>
+          <h2>Nicole Woods, Director</h2>
+          <img class="headshot" src="images/woods_square_2015.jpg" alt="Picture of Nicole Woods">
+          <p>
+            Nicole's educational background includes graduating with honors from both Towson University 
+            where she received her BS and the University of Maryland where she obtained her MSW.
+          </p><p>
+            She has been practicing since 2002 and has clinical experience working in a variety of settings
+            including inpatient hospitals, rehabilitation facilities, The MD Board of Childcare, outpatient
+            mental health clinics, and in private mental health practice.
+          </p><p>
+            Nicole is a Licensed Clinical Social Worker (LCSW) who works with children over the age of 8
+            years old, adults, and families. She believes in the ability to create change in one's life in
+            the context of a therapeutic relationship in an environment of safety and trust which she is
+            committed to providing.
+          </p><p>
+            Nicole is an active member of the <a href="http://socialworkers.org/" title="NASW">NASW</a>,
+            <a href="http://www.iaedp.com/" title="IAEDP">IAEDP</a>, 
+            <a href="http://www.napw.com/" title="NAPW">NAPW</a> ​​and is highly committed to her professional
+            development. As a result, she participates regularly in training and Continuing Education
+            courses at both the local and national level. She possesses a specialization in cognitive
+            behavioral therapy and geriatrics. Nicole is also a 
+            <a href="http://www.iaedp.com/overview%204%20Certification%20Overview.htm" title="CEDP">Certified
+            Eating Disorder Specialist</a> (CEDS), as well as a Certified Clinical Supervisor who provide​s
+            supervision for other clinicians seeking advanced clinical licensure.​
+          </p>
+        </section>
+        <section>
+          <h2>Megan Cline, Clinician</h2>
+          <img class="headshot" src="images/MeganCline.jpg" alt="Picture of Megan Cline">
+          <p>
+            Megan graduated with honors from York College of Pennsylvania, where she obtained her Bachelor's
+            Degree, and Temple University's Master of Social Work program.  She has been practicing in the
+            field since 2012, and in previous years, has volunteered her time and services to multiple
+            organizations, including Access York, Family-Child Resources, and the Children's Resource Center
+            in Harrisburg. She also has clinical experience working in partial hospitalization programs,
+            outpatient mental health facilities, mental health private practice, and higher education.
+          </p><p>
+            Megan is familiar and comfortable working with a variety of issues, including but not limited to,
+            Eating Disorders, LGBTQIAA-related issues, anxiety, grief and loss, self-harm/suicidality,
+            emotional disturbances, relationship/family concerns, depression, and other mental health
+            disorders.  With a non-judgmental approach, she empowers clients to make positive and healthy
+            choices when met with difficult life situations.
+          </p><p>
+            Megan obtained her social work license from the 
+            <a title="Pennsylvania State Board of Social Workers"
+            href="http://www.dos.pa.gov/ProfessionalLicensing/BoardsCommissions/SocialWorkersMarriageanFamilyTherapistsandProfessionalCounselors/Pages/default.aspx"
+            Pennsylvania State Board of Social Workers</a>,
+            Marriage and Family Therapists to continue practicing in the field of counseling and social work.
+            She also furthers her professional development and meets licensure requirements by regularly
+            participating in trainings and Continuing Education courses at local and national levels. As a 
+            social worker and member of the National Association of Social Workers
+            (<a href="http://socialworkers.org/" title="NASW">NASW</a>), she ensures that 
+            she practices within typical social work guidelines and properly abides by the Code of Ethics.​
+          </p>
+        </section>
+        <section>
+          <h2>Jessica Myers-Adams, Clinician</h2>
+          <img class="headshot" src="images/JessicaMyersPic.jpg" alt="Picture of Jessica Myers-Adams">
+          <p>
+            Jessica is a licensed clinical social worker who works with individuals 14 years and older,
+            families, and couples.
+          </p><p>
+            Jessica earned her bachelor's degree from Penn State in 2009. She has earned degrees in
+            education, psychology, and social work. Jessica earned her master's degree in social work from
+            Millersville University. She has over 10 years of experience working with clients in various
+            settings such as adult in-patient psychiatric units, nursing homes, schools, and private 
+            settings-providing care and education. 
+          </p><p>
+            Jessica is committed to her professional development and attends many trainings and programs to
+            enhance her skills. She is currently enrolled in a program that integrates Attachment Theory, 
+            Differentiation Theory and Neuroscience into a specific model designed to improve diagnosis and 
+            treatment for couples.​
+          </p>
+        </section>
+        <section>
+          <h2>Nicole Benner, Registered Dietitian</h2>
+          <img class="headshot" src="images/NicoleBennerpic1.jpeg" alt="Picture of Nicole Benner">
+          <p>
+            Nicole is a Registered Dietitian who is passionate ​about helping her clients find peace with 
+            food in order to meet their nutrition and wellness goals. She provides medical nutrition 
+            therapy based on individual needs and incorporates intuitive eating, a non-diet approach. Her 
+            nutrition philosophy promotes "all foods fit". She encourages clients to eat real, whole food as 
+            a source of nourishment as well as a source of enjoyment and break free from the diet cycle.
+          </p><p>
+            Nicole completed her Bachelors of Science Degree in Nutrition and Dietetics from Penn State 
+            University in 1996 and subsequently completed her Dietetic Internship with Aramark in the 
+            Greater Philadelphia area in 1997.
+          </p><p>
+            Nicole has over 10 years of Nutrition Counseling experience partnering with clients in hospitals, 
+            outpatient nutrition counseling and community nutrition settings. Currently, she holds a position 
+            at Messiah College where she counsels students who struggle with eating disorders. ​
+          </p><p>
+            Nicole is committed to building a safe environment in which her clients can explore their 
+            relationship with food without judgment or criticism. In addition, she strives to stay current on 
+            research and treatment modalities through continuing education and trainings. It is her desire to 
+            continue specialization in the treatment of eating disorders. She is a member of the Academy of 
+            Nutrition and Dietetics and the International Association of Eating Disorder Professionals.​ ​
+          </p>
+        </section>
+        <section>
+          <h2>James Corbin, Clinician</h2>
+          <img class="headshot" src="images/Jamescorbinpic1.JPG" alt="Picture of James Corbin">
+          <p>
+            Megan graduated with honors from York College of Pennsylvania, where she obtained her Bachelor's
+            Degree, and Temple University's Master of Social Work program.  She has been practicing in the
+            field since 2012, and in previous years, has volunteered her time and services to multiple
+            organizations, including Access York, Family-Child Resources, and the Children's Resource Center
+            in Harrisburg.  She also has clinical experience working in partial hospitalization programs,
+            outpatient mental health facilities, mental health private practice, and higher education.
+          </p><p>
+            Megan is familiar and comfortable working with a variety of issues, including but not limited to,
+            Eating Disorders, LGBTQIAA-related issues, anxiety, grief and loss, self-harm/suicidality,
+            emotional disturbances, relationship/family concerns, depression, and other mental health
+            disorders.  With a non-judgmental approach, she empowers clients to make positive and healthy
+            choices when met with difficult life situations.
+          </p><p>
+            Megan obtained her social work license from the Pennsylvania State Board of Social Workers,
+            Marriage and Family Therapists to continue practicing in the field of counseling and social work.
+            She also furthers her professional development and meets licensure requirements by regularly
+            participating in trainings and Continuing Education courses at local and national levels. As a 
+            social worker and member of the National Association of Social Workers (NASW), she ensures that 
+            she practices within typical social work guidelines and properly abides by the Code of Ethics.​
+          </p>
+        </section>        
       </div>
     </main>
     <footer class="footer">
