--- a/index.html
+++ b/index.html
@@ -8,14 +8,8 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <!-- Optional theme -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/default.css"/>
   <title>Northeastern Counseling Services | Mechanicsburg, PA</title>
-  <style>
-  html { position: relative; min-height: 100%; }
-  body { margin-bottom: 60px; padding-top: 70px; font-family:"Segoe UI","Segoe","Helvetica Neue",Helvetica,Arial,sans-serif; }
-  .footer { position: absolute; bottom: 0; width: 100%; height: 40px; background-color: #f5f5f5; padding-top:8px; }
-  .navbar-brand>img{ display:inline;margin:0 10px; } /* add height:100% for bigger images */
-  main { font-size:1.25em; }
-  </style>
 </head>
 <body>
   <div>
