fix for about page link

--- a/about-us.html
+++ b/about-us.html
@@ -88,7 +88,7 @@
           </p><p>
             Megan obtained her social work license from the 
             <a title="Pennsylvania State Board of Social Workers"
-            href="http://www.dos.pa.gov/ProfessionalLicensing/BoardsCommissions/SocialWorkersMarriageanFamilyTherapistsandProfessionalCounselors/Pages/default.aspx"
+            href="http://www.dos.pa.gov/ProfessionalLicensing/BoardsCommissions/SocialWorkersMarriageanFamilyTherapistsandProfessionalCounselors/Pages/default.aspx">
             Pennsylvania State Board of Social Workers</a>,
             Marriage and Family Therapists to continue practicing in the field of counseling and social work.
             She also furthers her professional development and meets licensure requirements by regularly
