--- a/confidentiality.html
+++ b/confidentiality.html
@@ -8,14 +8,8 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <!-- Optional theme -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/default.css"/>
   <title>Northeastern Counseling Services | Mechanicsburg, PA</title>
-  <style>
-  html { position: relative; min-height: 100%; }
-  body { margin-bottom: 60px; padding-top: 70px; font-family:"Segoe UI","Segoe","Helvetica Neue",Helvetica,Arial,sans-serif; }
-  .footer { position: absolute; bottom: 0; width: 100%; height: 40px; background-color: #f5f5f5; padding-top:8px; }
-  .navbar-brand>img{ display:inline;margin:0 10px; } /* add height:100% for bigger images */
-  main { font-size:1.25em; }
-  </style>
 </head>
 <body>
   <div>
@@ -47,8 +41,21 @@
     </header>
     <main>
       <div class="container">
+        <h1>Confidentiality</h1>
         <p>
+          Northeastern Counseling Services maintains strict standards of confidentiality. The law protects
+          the relationship between a client and a psychotherapist. We will not release any records of your
+          counseling or discuss your case with anyone unless you give us your explicit written consent.
+          Exceptions to this include:
         </p>
+        <ul>
+          <li>Suspected child abuse or dependent adult or elder abuse for which I am required by law to
+            report this to the ​appropriate authorities immediately.</li>
+          <li>If a client is threatening serious bodily harm to another person(s). I must notify the police
+            and the intended victim.</li>
+          <li>If a client intends to harm himself or herself, I will make every effort to enlist their
+            cooperation in ensuring their safety.</li>
+        </ul>
       </div>
     </main>
     <footer class="footer">
