Rates and insurance Updated common questions link

--- a/common-questions.html
+++ b/common-questions.html
@@ -109,7 +109,8 @@
         <h2>First Contact</h2>
         <p>
           We find it often helpful to speak briefly on the phone to get a sense of what your needs are. We are 
-          also comfortable being contacted by email. Please see the Contact Us section of this website for an 
+          also comfortable being contacted by email. Please see the
+          <a href="contact-us.html" title="Contact Us">Contact Us</a> section of this website for an 
           email address and information about communication via email.
         </p>
       </div>
