--- a/rates-and-insurance.html
+++ b/rates-and-insurance.html
@@ -8,14 +8,8 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <!-- Optional theme -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/default.css"/>
   <title>Northeastern Counseling Services | Mechanicsburg, PA</title>
-  <style>
-  html { position: relative; min-height: 100%; }
-  body { margin-bottom: 60px; padding-top: 70px; font-family:"Segoe UI","Segoe","Helvetica Neue",Helvetica,Arial,sans-serif; }
-  .footer { position: absolute; bottom: 0; width: 100%; height: 40px; background-color: #f5f5f5; padding-top:8px; }
-  .navbar-brand>img{ display:inline;margin:0 10px; } /* add height:100% for bigger images */
-  main { font-size:1.25em; }
-  </style>
 </head>
 <body>
   <div>
@@ -47,7 +41,37 @@
     </header>
     <main>
       <div class="container">
+        <h1>Rates and Insurance</h1>
+        <h2>Reduced Fee</h2>
         <p>
+          Reduced fee services are available on a limited basis.  Please contact us for further
+          information.
+        </p>
+        <h2>Insurance</h2>
+        <p>
+          Services may be covered in full or in part by your health insurance or employee benefit plan.
+          Please check your coverage carefully by asking the following questions:
+        </p>
+        <ul>
+          <li>Do I have mental health benefits?</li>
+          <li>What is my deductible and has it been met?</li>
+          <li>How many sessions per calendar year does my plan cover?</li>
+          <li>How much does my plan cover for an out-of-network provider?</li>
+          <li>What is the coverage amount per therapy session?</li>
+          <li>Is approval required from my primary care physician?</li>
+        </ul>
+        <h2>Payment</h2>
+        <p>
+          Cash, checks and other payment choices are accepted for payment.
+        </p>
+        <h2>Cancellation Policy</h2>
+        <p>
+          If you do not show up for your scheduled appointment, and you have not notified us at least 48
+          hours in advance, you will be required to pay the full cost of the session.
+        </p>
+        <h2>Contact Us</h2>
+        <p>
+          Questions?  Request an appointment?  Please <a href="contact-us.html" title="Contact Us">contact us</a>.
         </p>
       </div>
     </main>
