contact us page

--- a/contact-us.html
+++ b/contact-us.html
@@ -47,8 +47,36 @@
     </header>
     <main>
       <div class="container">
+        <h1>Contact Us</h1>
         <p>
+          You may leave us a confidential voice mail or send an email. Please remember that email is
+          not a confidential communication, so security cannot be guarenteed and delivery times are
+          often unreliable. In order to protect your confidentiality, we do not communicate about anything
+          clinical over email. Please do not use email to contact us in an emergency and be careful not to
+          include any sensitive material.
         </p>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <h2>Office Address</h2>
+            <p>
+              5021 East Trindle Rd
+            <br>
+              Mechanicsburg, PA 17050
+            </p><p>
+              Voice: <a href="tel:717-406-5190​" title="Voice phone">717-406-5190​</a>
+            </p><p>
+              Fax: 717-202-2590
+            </p><p>
+              <a href="mailto:info@northeasterncs.com​" title="email address">info@northeasterncs.com​</a>
+            </p>
+          </div>
+          <div class="col-md-6">
+            <iframe width="360" height="310"
+              src="http://www.bing.com/maps/embed/viewer.aspx?v=3&amp;cp=40.225540~-76.972755&amp;lvl=12&amp;w=350&amp;h=300&amp;sty=r&amp;typ=d&amp;pp=5021%20E%20Trindle%20Rd%2c%20Mechanicsburg%2c%20PA%2017050~~40.225540~-76.972755&amp;ps=&amp;dir=0&amp;mkt=en-us&amp;src=O365&amp;form=BMEMJS" frameborder="0"></iframe>
+          </div>
+        </div>
       </div>
     </main>
     <footer class="footer">
