fixed contact us information

--- a/about-us.html
+++ b/about-us.html
@@ -139,32 +139,28 @@
             relationship with food without judgment or criticism. In addition, she strives to stay current on 
             research and treatment modalities through continuing education and trainings. It is her desire to 
             continue specialization in the treatment of eating disorders. She is a member of the Academy of 
-            Nutrition and Dietetics and the International Association of Eating Disorder Professionals.​ ​
+            Nutrition and Dietetics and the International Association of Eating Disorder Professionals
+            (<a href="http://www.iaedp.com/" title="IAEDP">IAEDP</a>).​ ​
           </p>
         </section>
         <section>
           <h2>James Corbin, Clinician</h2>
           <img class="headshot" src="images/Jamescorbinpic1.JPG" alt="Picture of James Corbin">
           <p>
-            Megan graduated with honors from York College of Pennsylvania, where she obtained her Bachelor's
-            Degree, and Temple University's Master of Social Work program.  She has been practicing in the
-            field since 2012, and in previous years, has volunteered her time and services to multiple
-            organizations, including Access York, Family-Child Resources, and the Children's Resource Center
-            in Harrisburg.  She also has clinical experience working in partial hospitalization programs,
-            outpatient mental health facilities, mental health private practice, and higher education.
+            James R. Corbin has over 20 years of experience working in Pennsylvania as an LSW. James
+            received his Masters Degree in Social Work from Temple University and earned his Bachelor of
+            Arts Degree in Political Science from the Pennsylvania State University. 
           </p><p>
-            Megan is familiar and comfortable working with a variety of issues, including but not limited to,
-            Eating Disorders, LGBTQIAA-related issues, anxiety, grief and loss, self-harm/suicidality,
-            emotional disturbances, relationship/family concerns, depression, and other mental health
-            disorders.  With a non-judgmental approach, she empowers clients to make positive and healthy
-            choices when met with difficult life situations.
+            James possesses a specialty in treating childhood mental illness and has received training in
+            child centered play therapy. He also specializes in providing individual and family therapy
+            with children, adolescents, and their families.  Since 2008, he has served as a full-time
+            clinical faculty and instructor in the Graduate School of Social Work at Temple University and
+            currently serves as their Assistant MSW Program Director. 
           </p><p>
-            Megan obtained her social work license from the Pennsylvania State Board of Social Workers,
-            Marriage and Family Therapists to continue practicing in the field of counseling and social work.
-            She also furthers her professional development and meets licensure requirements by regularly
-            participating in trainings and Continuing Education courses at local and national levels. As a 
-            social worker and member of the National Association of Social Workers (NASW), she ensures that 
-            she practices within typical social work guidelines and properly abides by the Code of Ethics.​
+            Mr. Corbin has written and presented extensively on the subject of neuroscience, trauma, and
+            attachment and the impact on clinical practice. He is a volunteer therapist for Give An Hour
+            and was an active member of PACares and the Harrisburg Regional Planning Team for Operation
+            Military Kids.​​​​ 
           </p>
         </section>        
       </div>
