updated index with jumbotron

--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
     </header>
     <main>
       <div class="container">
+        <div class="jumbotron">
+          <img class="img-responsive" src="images/400dpiLogo.png" alt="Trees"/>
+          <h1>Northeastern Counseling Services</h1>
+        </div>
         <p>
         Welcome. All of us need help from time to time to see ourselves more clearly and to develop
         new ways of living fuller, richer lives. Our focus is on improving how you perceive and navigate
