--- a/resources.html
+++ b/resources.html
@@ -18,7 +18,7 @@
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-          <a class="navbar-brand" href="index.html"><img class="hidden-xs" src="images/44Logo_notext.png">Northeastern Counseling Services</a><br>
+          <a class="navbar-brand" href="index.html"><img class="hidden-xs" src="images/44Logo_notext.png">Northeastern Counseling Services</a>
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-main" aria-expanded="false">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -27,7 +27,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbar-main">
           <ul class="nav navbar-nav">
-            <li><a href="aboutus.html">About Us</a></li>
+            <li><a href="about-us.html">About Us</a></li>
             <li><a href="common-questions.html">Common Questions</a></li>
             <li><a href="confidentiality.html">Confidentiality</a></li>
             <li><a href="rates-and-insurance.html">Rates and Insurance</a></li>
