--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-          <a class="navbar-brand" href="index.html"><img class="hidden-xs" src="images/44Logo_notext.png">Northeastern Counseling Services</a>
+          <a class="navbar-brand" href="index.html">Northeastern Counseling Services</a>
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-main" aria-expanded="false">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
