Updated welcome page

--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
           <h1>Northeastern Counseling Services</h1>
         </div>
         <p>
-        Welcome. All of us need help from time to time to see ourselves more clearly and to develop
-        new ways of living fuller, richer lives. Our focus is on improving how you perceive and navigate
-        life's challenges, transitions, and relationships with yourself and others. Our work together can
-        help you to develop new skills to create the life you want, to enhance your relationships, or
-        work life.                          
+        At Northeastern Counseling Services we understand that life can sometimes be overwhelming,
+        stressful, and challenging. From experiencing everyday stressors to feelings of anxiety and
+        depression- our skilled and experienced licensed counselors can help provide you with the
+        client-centered, tailored support you need to achieve emotional and behavioral well-being.
         </p><p>
-        Therapy can provide long lasting benefits, giving you the tools you need to avoid triggers, re-
-        direct damaging patterns, and overcome whatever challenges you may be facing.​​
+        At Northeastern Counseling Services we pride ourselves on taking a complete and thoughtful
+        approach to your emotional and behavioral wellness goals. We look forward to assisting you
+        in enhancing the life you ideally imagine living.
         </p>
       </div>
     </main>
