change to Nicole's bio

--- a/about-us.html
+++ b/about-us.html
@@ -62,11 +62,16 @@
             <a href="http://www.iaedp.com/" title="IAEDP">IAEDP</a>, 
             <a href="http://www.napw.com/" title="NAPW">NAPW</a> ​​and is highly committed to her professional
             development. As a result, she participates regularly in training and Continuing Education
-            courses at both the local and national level. She possesses a specialization in cognitive
-            behavioral therapy and geriatrics. Nicole is also a 
+            courses at both the local and national level. Nicole is recognized as a 
+            <a href="https://www.giveanhour.org/">Give an Hour</a> program clinician for military personnel.
+            She possesses a specialization in cognitive behavioral therapy and geriatrics. Nicole is also a 
             <a href="http://www.iaedp.com/overview%204%20Certification%20Overview.htm" title="CEDP">Certified
             Eating Disorder Specialist</a> (CEDS), as well as a Certified Clinical Supervisor who provide​s
             supervision for other clinicians seeking advanced clinical licensure.​
+          </p><p>
+            In her spare time, she enjoys reading, crafting, volleyball, coaching 
+            <a href="https://www.girlsontherun.org/" title="Girls on the Run">Girls on the Run</a> and spending
+            time with family.
           </p>
         </section>
         <section>
