changed employees added hidden carousel

--- a/about-us.html
+++ b/about-us.html
@@ -27,7 +27,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbar-main">
           <ul class="nav navbar-nav">
-            <li><a href="about-us.html">About Us</a></li>
+            <li class="active"><a href="about-us.html">About Us</a></li>
             <li><a href="common-questions.html">Common Questions</a></li>
             <li><a href="confidentiality.html">Confidentiality</a></li>
             <li><a href="rates-and-insurance.html">Rates and Insurance</a></li>
@@ -104,25 +104,6 @@
           </p>
         </section>
         <section>
-          <h2>Jessica Myers-Adams, Clinician</h2>
-          <img class="headshot" src="images/JessicaMyersPic.jpg" alt="Picture of Jessica Myers-Adams">
-          <p>
-            Jessica is a licensed clinical social worker who works with individuals 14 years and older,
-            families, and couples.
-          </p><p>
-            Jessica earned her bachelor's degree from Penn State in 2009. She has earned degrees in
-            education, psychology, and social work. Jessica earned her master's degree in social work from
-            Millersville University. She has over 10 years of experience working with clients in various
-            settings such as adult in-patient psychiatric units, nursing homes, schools, and private 
-            settings-providing care and education. 
-          </p><p>
-            Jessica is committed to her professional development and attends many trainings and programs to
-            enhance her skills. She is currently enrolled in a program that integrates Attachment Theory, 
-            Differentiation Theory and Neuroscience into a specific model designed to improve diagnosis and 
-            treatment for couples.​
-          </p>
-        </section>
-        <section>
           <h2>Nicole Benner, Registered Dietitian</h2>
           <img class="headshot" src="images/NicoleBennerpic1.jpeg" alt="Picture of Nicole Benner">
           <p>
@@ -163,11 +144,43 @@
             currently serves as their Assistant MSW Program Director. 
           </p><p>
             Mr. Corbin has written and presented extensively on the subject of neuroscience, trauma, and
-            attachment and the impact on clinical practice. He is a volunteer therapist for Give An Hour
-            and was an active member of PACares and the Harrisburg Regional Planning Team for Operation
-            Military Kids.​​​​ 
+            attachment and the impact on clinical practice. He is a volunteer therapist for 
+            <a href="https://www.giveanhour.org/">Give an Hour</a> and was an active member of PA Cares and
+            the Harrisburg Regional Planning Team for Operation Military Kids.​​​​ 
           </p>
         </section>        
+        <section>
+          <h2>Candace N. Johnson, Clinician</h2>
+          <img class="headshot" src="images/CandaceJohnsonPic.jpg" alt="Picture of Candace N. Johnson">
+          <p>
+            Candace is a Licensed Professional Counselor who treats those experiencing a wide variety of
+            issues, including anxiety, mood disorders, relationship difficulties, sleep issues, insomnia,
+            self-esteem concerns, grief and loss, adjustment to life's transitions, stress management,
+            family conflict, anger, and communication difficulties. Candace graduated from Indiana
+            University of Pennsylvania, where she obtained her Bachelor's Degree in Psychology and a minor
+            in Child and Family Studies. She then went on to complete her Master's Degree in Mental Health
+            Counseling at Shippensburg University. She has been practicing in the field since 2008 and has
+            clinical experience working in a variety of populations in settings including partial
+            hospitalization programs, behavioral health in elementary and middle schools, outpatient
+            mental health facilities, and higher education. In addition, Candace has volunteered her time
+            and services to multiple organizations, including
+            <a href="https://www.nationalservice.gov/programs/americorps">AmeriCorps</a>,
+            <a href="https://www.redcross.org/">Red Cross</a>, and Priority One.
+          </p><p>
+            Candace entered this field in order to enrich the daily lives of people, to help them develop
+            more satisfying interpersonal relationships, assist them with the obstacles they face in life,
+            and guide them toward making the changes they desire to accomplish their goals. She has
+            diversified experience, working with people of all ages, from a variety of cultural
+            backgrounds and currently treats a broad population of clients, including adolescents,
+            parents, adults, individuals, families, couples, and facilitating group therapy. 
+          </p><p>
+            Candace utilizes a client-centered treatment approach that is suited to each client's specific
+            needs. By helping to determine a client's motivation for change in their lives, a unique
+            treatment approach is developed. Candace offers a supportive and encouraging environment in
+            which treatment takes place. Her style incorporates skill building, prioritization,
+            development of insight, and is overall supportive and accommodating.
+          </p>
+        </section>
       </div>
     </main>
     <footer class="footer">
