--- a/contact-us.html
+++ b/contact-us.html
@@ -31,7 +31,7 @@
             <li><a href="common-questions.html">Common Questions</a></li>
             <li><a href="confidentiality.html">Confidentiality</a></li>
             <li><a href="rates-and-insurance.html">Rates and Insurance</a></li>
-            <li><a href="contact-us.html">Contact Us</a></li>
+            <li class="active"><a href="contact-us.html">Contact Us</a></li>
             <li><a href="resources.html">Resources</a></li>
             <li><a href="eating-disorder-myths.html">Eating Disorder Myths</a></li>
           <ul>
@@ -44,10 +44,10 @@
         <h1>Contact Us</h1>
         <p>
           You may leave us a confidential voice mail or send an email. Please remember that email is
-          not a confidential communication, so security cannot be guarenteed and delivery times are
-          often unreliable. In order to protect your confidentiality, we do not communicate about anything
-          clinical over email. Please do not use email to contact us in an emergency and be careful not to
-          include any sensitive material.
+          not a confidential method of communication, so security cannot be guarenteed and delivery times
+          are often unreliable. In order to protect your confidentiality, we do not communicate about
+          anything clinical over email. Please do not use email to contact us in an emergency and be
+          careful not to include any sensitive material.
         </p>
       </div>
       <div class="container">
