--- a/eating-disorder-myths.html
+++ b/eating-disorder-myths.html
@@ -33,7 +33,7 @@
             <li><a href="rates-and-insurance.html">Rates and Insurance</a></li>
             <li><a href="contact-us.html">Contact Us</a></li>
             <li><a href="resources.html">Resources</a></li>
-            <li><a href="eating-disorder-myths.html">Eating Disorder Myths</a></li>
+            <li class="active"><a href="eating-disorder-myths.html">Eating Disorder Myths</a></li>
           <ul>
         </div>
       </div>
