--- a/resources.html
+++ b/resources.html
@@ -32,7 +32,7 @@
             <li><a href="confidentiality.html">Confidentiality</a></li>
             <li><a href="rates-and-insurance.html">Rates and Insurance</a></li>
             <li><a href="contact-us.html">Contact Us</a></li>
-            <li><a href="resources.html">Resources</a></li>
+            <li class="active"><a href="resources.html">Resources</a></li>
             <li><a href="eating-disorder-myths.html">Eating Disorder Myths</a></li>
           <ul>
         </div>
@@ -254,7 +254,7 @@ Medical Library Association</a><br></p>
 <p><a href="http://www.mentalhelp.net/poc/center_index.php?id=8">Mental
 Help Net - Personality Disorders</a><br>
 <a href="http://www.focusas.com/PersonalityDisorders.html">Personality
-Disorders - Focus Adolescent Counselor Services</a><br><b>&nbsp;</b></p>
+Disorders - Focus Adolescent Counselor Services</a><br></p>
 
 <h2>Suicide Awareness and Hotlines</h2>
 <p><a
