--- a/common-questions.html
+++ b/common-questions.html
@@ -28,7 +28,7 @@
         <div class="collapse navbar-collapse" id="navbar-main">
           <ul class="nav navbar-nav">
             <li><a href="about-us.html">About Us</a></li>
-            <li><a href="common-questions.html">Common Questions</a></li>
+            <li class="active"><a href="common-questions.html">Common Questions</a></li>
             <li><a href="confidentiality.html">Confidentiality</a></li>
             <li><a href="rates-and-insurance.html">Rates and Insurance</a></li>
             <li><a href="contact-us.html">Contact Us</a></li>
