--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <!--
+  <meta name="description" content="Northeastern Counseling Services provides cognitive behavior health therapy and specializes in treatment of eating disorders." />
+  <meta name="keywords" content"counseling, therapist, psychologist, social work, couples, mental, marriage, family, grief, eating disorder, binge, anorexia, bulimia, cognitive behavioral therapy" />
+  -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -45,16 +49,55 @@
           <img class="img-responsive" src="images/400dpiLogo.png" alt="Trees"/>
           <h1>Northeastern Counseling Services</h1>
         </div>
-        <p>
-        At Northeastern Counseling Services we understand that life can sometimes be overwhelming,
-        stressful, and challenging. From experiencing everyday stressors to feelings of anxiety and
-        depression- our skilled and experienced licensed counselors can help provide you with the
-        client-centered, tailored support you need to achieve emotional and behavioral well-being.
-        </p><p>
-        At Northeastern Counseling Services we pride ourselves on taking a complete and thoughtful
-        approach to your emotional and behavioral wellness goals. We look forward to assisting you
-        in enhancing the life you ideally imagine living.
-        </p>
+<!--
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+          <!> Indicators <-!>
+          <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="3"></li>
+          </ol>
+          <!> Wrapper for slides <-!>
+          <div class="carousel-inner">
+            <div class="item active">
+              <img src="images/Logo.png" alt="Logo" style="width:100%;">
+            </div>
+            <div class="item">
+              <img src="images/01.jpg" alt="Exterior" style="width:100%;">
+            </div>
+            <div class="item">
+              <img src="images/02.jpg" alt="Interior 1" style="width:100%;">
+            </div>
+            <div class="item">
+              <img src="images/03.jpg" alt="Interior 2" style="width:100%;">
+            </div>
+          </div>
+          <!> Left and right controls <-!>
+          <!>
+          <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#myCarousel" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+          </a>
+          <-!>
+        </div>
+-->
+        <article style="padding-top: 30px;">
+          <p>
+          At Northeastern Counseling Services we understand that life can sometimes be overwhelming,
+          stressful, and challenging. From experiencing everyday stressors to feelings of anxiety and
+          depression- our skilled and experienced licensed counselors can help provide you with the
+          client-centered, tailored support you need to achieve emotional and behavioral well-being.
+          </p><p>
+          At Northeastern Counseling Services we pride ourselves on taking a complete and thoughtful
+          approach to your emotional and behavioral wellness goals. We look forward to assisting you
+          in enhancing the life you ideally imagine living.
+          </p>
+        </article>
       </div>
     </main>
     <footer class="footer">
