--- a/rates-and-insurance.html
+++ b/rates-and-insurance.html
@@ -30,7 +30,7 @@
             <li><a href="about-us.html">About Us</a></li>
             <li><a href="common-questions.html">Common Questions</a></li>
             <li><a href="confidentiality.html">Confidentiality</a></li>
-            <li><a href="rates-and-insurance.html">Rates and Insurance</a></li>
+            <li class="active"><a href="rates-and-insurance.html">Rates and Insurance</a></li>
             <li><a href="contact-us.html">Contact Us</a></li>
             <li><a href="resources.html">Resources</a></li>
             <li><a href="eating-disorder-myths.html">Eating Disorder Myths</a></li>
