--- a/about-us.html
+++ b/about-us.html
@@ -181,6 +181,32 @@
             development of insight, and is overall supportive and accommodating.
           </p>
         </section>
+        <section>
+          <h2>Denice Haas, Clinician</h2>
+          <img class="headshot" src="images/DeniceHaasPic.jpg" alt="Picture of Denice Haas">
+          <p>
+            Denise Haas is a Licensed Clinical Social Worker who received her Masters in social work from
+            University of Maryland, Baltimore with a focus in children and families. She received her
+            Bachelor of Arts degree from University of Maryland, majoring in criminal justice.
+          </p><p>
+            She has been practicing since 2014 and has clinical experience working with children in
+            schools, their homes, and with children in foster care. She believes in the ability to help
+            children navigate through life in a way that other people can understand them. She does this
+            by helping children use their own strength, learning new coping skills, and learning how to
+            believe in themselves.
+          </p><p>
+            Denise Haas has worked with children and families for many years in a number of settings,
+            including, a family homeless shelter, behavioral health, schools, foster care and adoption.
+            She brings not only a passion for helping children and families, but is commuted to making
+            life a little more manageable for families.
+          </p><p>
+            Denise has an interest in trauma, attachment, foster care and adoption issues, anxiety, and
+            ADHD. She enjoys helping watching/teaching families learn to communicate and help each other
+            grow in a positive way.
+          </p><p>
+            In her spare time, she enjoys photography, being outside, and spending time with family.
+          </p>
+        </section>
       </div>
     </main>
     <footer class="footer">
