--- a/about-us.html
+++ b/about-us.html
@@ -182,10 +182,10 @@
           </p>
         </section>
         <section>
-          <h2>Denice Haas, Clinician</h2>
-          <img class="headshot" src="images/DeniceHaasPic.jpg" alt="Picture of Denice Haas">
+          <h2>Denise Haas, Clinician</h2>
+          <img class="headshot" src="images/DeniseHaasPic.jpg" alt="Picture of Denise Haas">
           <p>
-            Denise Haas is a Licensed Clinical Social Worker who received her Masters in social work from
+            Denise Haas is a Licensed Clinical Social Worker who received her Masters in Social Work from
             University of Maryland, Baltimore with a focus in children and families. She received her
             Bachelor of Arts degree from University of Maryland, majoring in criminal justice.
           </p><p>
@@ -197,14 +197,14 @@
           </p><p>
             Denise Haas has worked with children and families for many years in a number of settings,
             including, a family homeless shelter, behavioral health, schools, foster care and adoption.
-            She brings not only a passion for helping children and families, but is commuted to making
+            She brings not only a passion for helping children and families, but is committed to making
             life a little more manageable for families.
           </p><p>
             Denise has an interest in trauma, attachment, foster care and adoption issues, anxiety, and
-            ADHD. She enjoys helping watching/teaching families learn to communicate and help each other
-            grow in a positive way.
+            ADHD. She enjoys helping families learn to communicate and helping each other grow in a
+            positive way.
           </p><p>
-            In her spare time, she enjoys photography, being outside, and spending time with family.
+            In her spare time, she enjoys photography, being outside and spending time with family.
           </p>
         </section>
       </div>
