--- a/about-us.html
+++ b/about-us.html
@@ -175,6 +175,13 @@
             In her spare time, she enjoys photography, being outside and spending time with family.
           </p>
         </section>
+        <section class="hidden">
+          <h2>Selene Scavitto, Clinician</h2>
+          <img class="headshot" src="images/SeleneScavitto.jpg" alt="Picture of Selene Scavito">
+          <p>
+          </p><p>
+          </p>
+        </section>
       </div>
     </main>
     <footer class="footer">
