--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Northeastern Counseling Services provides cognitive behavior health therapy and specializes in treatment of eating disorders." />
   <meta name="keywords" content"counseling, therapist, psychologist, social work, couples, mental, marriage, family, grief, eating disorder, binge, anorexia, bulimia, cognitive behavioral therapy" />
   -->
+  <meta name="msvalidate.01" content="9BF1CCD70CD1124D689D3B47D9AE4BFF" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
